automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,9 +317,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "3e7e8d3a-cda5-11e8-94b8-0242ac110016"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f7aa65e1-f1a8-4b83-99a0-ae587d12026b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f7aa65e1-f1a8-4b83-99a0-ae587d12026b\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"3e81c7ca-cda5-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f7aa65e1-f1a8-4b83-99a0-ae587d12026b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f7aa65e1-f1a8-4b83-99a0-ae587d12026b\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"3e81c7ca-cda5-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
