--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    "outputs": [],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x':x_values', 'ytext': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x':x_values, 'y' text': text_values}"
    ]
   },
   {
