--- a/index.ipynb
+++ b/index.ipynb
@@ -287,12 +287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-8b6a9e0d9f67>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-8b6a9e0d9f67>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bar_trace_first_three_pops = {'type': 'scatter', 'x':x_values, 'y':y_values text': text_values}\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x':x_values, 'y' text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x':x_values, 'y':y_values text': text_values}"
    ]
   },
   {
