automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,17 +287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = x_values\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x':x_values, 'y':y_values}#, 'text': text_values"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x':x_values, 'y':y_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "'bar'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
