automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +325,13 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
          "type": "bar",
-         "uid": "0d1746e0-cda7-11e8-94b8-0242ac110016",
+         "uid": "1da80936-cda7-11e8-94b8-0242ac110016",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -342,10 +347,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"a2ab5cca-97ae-4ec4-a04a-bc5e4d67a476\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a2ab5cca-97ae-4ec4-a04a-bc5e4d67a476\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0d21d060-cda7-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"420d127f-8205-4da2-b11f-9accfbc2d30b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"420d127f-8205-4da2-b11f-9accfbc2d30b\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"1dab713e-cda7-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"a2ab5cca-97ae-4ec4-a04a-bc5e4d67a476\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a2ab5cca-97ae-4ec4-a04a-bc5e4d67a476\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"0d21d060-cda7-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"420d127f-8205-4da2-b11f-9accfbc2d30b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"420d127f-8205-4da2-b11f-9accfbc2d30b\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"1dab713e-cda7-11e8-94b8-0242ac110016\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
