--- a/index.ipynb
+++ b/index.ipynb
@@ -377,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
