--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n",
-    "y_values = \n",
+    "y_values =[cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': [], 'text': []}"
    ]
   },
