--- a/index.ipynb
+++ b/index.ipynb
@@ -381,10 +381,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values =[cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': [], 'text': []}\n",
+    "y_values =[cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n"
    ]
   },
   {
