--- a/index.ipynb
+++ b/index.ipynb
@@ -377,13 +377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n",
     "y_values =[cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}\n"
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
